--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,13 +3,12 @@
 	<div class="container">
 		<div class="row fullscreen align-items-center justify-content-between">
 			<div class="col-lg-6 col-md-6 banner-left">
-				<h6>This is me</h6>
-				<h1>Philip Gilbert</h1>
+				<h6>Howdy! This is</h6>
+				<h1>Dada Eats</h1>
 				<p>
-					You will begin to realise why this exercise is called the Dickens Pattern with reference to the
-					ghost showing Scrooge some different futures.
+					今天中午，我想來點...
 				</p>
-				<a href="/menu/getMenu?orderId=<%= orderId %>" class="primary-btn text-uppercase">看菜單</a>
+				<a href="/menu/getMenu" class="primary-btn text-uppercase">看菜單</a>
 			</div>
 			<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
 				<img class="img-fluid" src="img/hero-img.png" alt="">
@@ -24,11 +23,11 @@
 	<div class="container">
 		<div class="row align-items-center justify-content-between">
 			<div class="col-lg-6 col-md-6 home-about-left">
-				<img class="img-fluid" src="img/about-img.png" alt="">
+				<img class="img-fluid" src="img/hero-img.png" alt="">
 			</div>
 			<div class="col-lg-5 col-md-6 home-about-right">
-				<h6>About Me</h6>
-				<h1 class="text-uppercase">Personal Details</h1>
+				<h6>About</h6>
+				<h1 class="text-uppercase">關於這個平台</h1>
 				<p>
 					Here, I focus on a range of items and features that we use in life without giving them a second
 					thought. such as Coca Cola. Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
@@ -41,6 +40,64 @@
 	</div>
 </section>
 <!-- End home-about Area -->
+
+<section class="timeline pb-120 section-gap">
+	<div class="text-center">
+		<div class="menu-content pb-70">
+			<div class="title text-center">
+				<h1 class="mb-10">My Qualifications</h1>
+				<p>Who are in extremely love with eco friendly system.</p>
+			</div>
+		</div>
+	</div>
+	<ul>
+		<li>
+			<div class="content hidden" style="opacity: 1;">
+				<h4>
+					<time>Masters in Graphics &amp; Fine Arts</time>
+				</h4>
+				<p><b>Session:</b> 2010-11</p>
+				<p><b>Result:</b> 3.78 (In the Scale of 4.00)</p>
+			</div>
+		</li>
+		<li>
+			<div class="content hidden" style="opacity: 1;">
+				<img class="img-fluid mx-auto d-block mb-30" src="img/about/c-logo.png" alt="">
+				<h4>
+					<time>Creative Content Developer</time>
+				</h4>
+				<p>July 2015 to Present</p>
+			</div>
+		</li>
+		<li>
+			<div class="content hidden" style="opacity: 1;">
+				<h4>
+					<time>Bachelor in Graphics &amp; UI/UX</time>
+				</h4>
+				<p><b>Session:</b> 2006-09</p>
+				<p><b>Result:</b> 3.40 (In the Scale of 4.00)</p>
+			</div>
+		</li>
+		<li>
+			<div class="content hidden" style="opacity: 1;">
+				<img class="img-fluid mx-auto d-block mb-30" src="img/about/c-logo.png" alt="">
+				<h4>
+					<time>Senior UI/UX Designer</time>
+				</h4>
+				<p>July 2015 to Present</p>
+			</div>
+		</li>
+		<li>
+			<div class="content hidden" style="opacity: 1;">
+				<h4>
+					<time>Diploma in Fine Arts &amp; Printing</time>
+				</h4>
+				<p><b>Session:</b> 2003-06</p>
+				<p><b>Result:</b> 4.94 (In the Scale of 5.00)</p>
+			</div>
+		</li>
+	</ul>
+</section>
 
 <!-- Start services Area -->
 <section class="services-area section-gap">
