--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -23,7 +23,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 text-right">
+                    <div class="col-sm-12 col-md-4 text-right align-self-center">
                         <div class="inline-flex banner-left">
                             <div class="menu-title mr-15">NT$<%= menus.menu_categories[i].products[j].lowestPrice %>元起
                             </div>
@@ -45,10 +45,12 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             <% if( menus.menu_categories[i].products[j].logo_path ){ %>
-                            <img src="<%= menus.menu_categories[i].products[j].logo_path %>" width="100%" alt="flag">
+                            <img id="menu-img-<%= menus.menu_categories[i].products[j].id %>"
+                                src="<%= menus.menu_categories[i].products[j].logo_path %>" width="100%" alt="flag">
                             <% } %>
                             <div class="modal-title" id="Modal-Title">
-                                <p id="menu-title-<%= menus.menu_categories[i].products[j].id %>" class="menu-title"><%= menus.menu_categories[i].products[j].name %></p>
+                                <p id="menu-title-<%= menus.menu_categories[i].products[j].id %>" class="menu-title">
+                                    <%= menus.menu_categories[i].products[j].name %></p>
                                 <%= menus.menu_categories[i].products[j].description %>
                             </div>
                         </div>
@@ -58,19 +60,21 @@
                                 <span>
                                     <input type="radio" name="vari-check" id="vari_<%=i%>_<%=j%>_<%=m%>"
                                         menudata="<%= menus.menu_categories[i].products[j].product_variations[m].topping_ids %>"
-                                        menudetails={"item":"<%= menus.menu_categories[i].products[j].product_variations[m].name %>","price":<%= menus.menu_categories[i].products[j].product_variations[m].price %>} 
-                                        >
+                                        menudetails={"item":"<%= menus.menu_categories[i].products[j].product_variations[m].name %>","price":<%= menus.menu_categories[i].products[j].product_variations[m].price %>}>
                                     <%= menus.menu_categories[i].products[j].product_variations[m].name %>
                                 </span>
                                 <span
                                     class="text-right">NT$<%= menus.menu_categories[i].products[j].product_variations[m].price %></span>
-                                </label>
+                            </label>
                             <% } %>
                             <div class="toppings-wrap"></div>
                         </div>
                         <div class="modal-footer">
-                            <p>總計：<p id="sum">5</p></p>
-                            <button id="submit-btn-<%= menus.menu_categories[i].products[j].id %>" type="button" class="btn btn-primary" onclick="submit(<%= menus.menu_categories[i].products[j].id %>)" data-dismiss="modal">確定</button>
+                            <p>總計：<p id="sum">5</p>
+                            </p>
+                            <button id="submit-btn-<%= menus.menu_categories[i].products[j].id %>" type="button"
+                                class="btn btn-primary" onclick="submit(<%= menus.menu_categories[i].products[j].id %>)"
+                                data-dismiss="modal">確定</button>
                         </div>
                     </div>
                 </div>
@@ -82,10 +86,6 @@
 </div>
 
 <script>
-    $(document).ready(() => {
-        console.log(location.search.split('orderId=')[1]);
-
-    })
 
     $(document).on('change', 'input:radio[id^="vari_"]', function (event) {
         var topping_ids = this.getAttribute("menudata")
@@ -98,19 +98,21 @@
                 if (err) throw err
             },
             success: function (response) {
-                $(".toppings-wrap").append("<div class=\"toppings\"></div>");
+                if (topping_ids) {
+                    $(".toppings-wrap").append("<div class=\"toppings\"></div>");
+                    console.log(topping_ids);
 
-                for (var i = 0; i < topping_ids.split(",").length; i++) {
-                    // console.log(response[topping_ids.split(",")[i]].name);
-                    $(".toppings").append("<p class=\"menu-title\">" + response[topping_ids.split(",")[i]].name + "</p>");
-                    for (var j = 0; j < response[topping_ids.split(",")[i]].options.length; j++) {
-                        // console.log(response[topping_ids.split(",")[i]].options[j].name);
-                        if(response[topping_ids.split(",")[i]].quantity_minimum == 0 && response[topping_ids.split(",")[i]].quantity_maximum == 1) {
-                            // cancelable radio
-                            $(".toppings").append(`<div class="toppings-body d-flex justify-content-between">
+                    for (var i = 0; i < topping_ids.split(",").length; i++) {
+                        // console.log(response[topping_ids.split(",")[i]].name);
+                        $(".toppings").append("<p class=\"menu-title\">" + response[topping_ids.split(",")[i]].name + "</p>");
+                        for (var j = 0; j < response[topping_ids.split(",")[i]].options.length; j++) {
+                            // console.log(response[topping_ids.split(",")[i]].options[j].name);
+                            if (response[topping_ids.split(",")[i]].quantity_minimum == 0 && response[topping_ids.split(",")[i]].quantity_maximum == 1) {
+                                // cancelable radio
+                                $(".toppings").append(`<div class="toppings-body d-flex justify-content-between">
                                     <span>
                                         <label><input type="radio" name="vari-check-${i}" id="cancelable-radio-${i}-${j}"
-                                            menudetails={"item":"${ response[topping_ids.split(",")[i]].options[j].name}","price":${ response[topping_ids.split(",")[i]].options[j].price}} 
+                                            menudetails={"item":"${ response[topping_ids.split(",")[i]].options[j].name}","price":${response[topping_ids.split(",")[i]].options[j].price}} 
                                             >
                                         ${ response[topping_ids.split(",")[i]].options[j].name}</label>
                                     </span>
@@ -119,9 +121,9 @@
                                         class="text-right">NT$${ response[topping_ids.split(",")[i]].options[j].price}</span>
                                 </div>`)
 
-                        }else if (response[topping_ids.split(",")[i]].quantity_minimum == 1 && response[topping_ids.split(",")[i]].quantity_maximum == 1) {
-                            // uncancelable radio
-                            $(".toppings").append(`<div class="toppings-body d-flex justify-content-between">
+                            } else if (response[topping_ids.split(",")[i]].quantity_minimum == 1 && response[topping_ids.split(",")[i]].quantity_maximum == 1) {
+                                // uncancelable radio
+                                $(".toppings").append(`<div class="toppings-body d-flex justify-content-between">
                                     <span>
                                         <label><input type="radio" name="vari-check-${i}" id="uncancelable-radio-${i}-${j}">
                                         ${ response[topping_ids.split(",")[i]].options[j].name}</label>
@@ -131,12 +133,12 @@
                                         class="text-right">NT$${ response[topping_ids.split(",")[i]].options[j].price}</span>
                                 </div>`)
 
-                        }else if(response[topping_ids.split(",")[i]].quantity_minimum == 0 && response[topping_ids.split(",")[i]].quantity_maximum > 1) {
-                            // checkbox
-                            $(".toppings").append(`<div class="toppings-body d-flex justify-content-between">
+                            } else if (response[topping_ids.split(",")[i]].quantity_minimum == 0 && response[topping_ids.split(",")[i]].quantity_maximum > 1) {
+                                // checkbox
+                                $(".toppings").append(`<div class="toppings-body d-flex justify-content-between">
                                     <span>
                                         <label><input type="checkbox" name="vari-check-${i}" id="checkbox-${i}-${j}"
-                                            menudetails={"item":"${ response[topping_ids.split(",")[i]].options[j].name}","price":${ response[topping_ids.split(",")[i]].options[j].price}}
+                                            menudetails={"item":"${ response[topping_ids.split(",")[i]].options[j].name}","price":${response[topping_ids.split(",")[i]].options[j].price}}
                                             >
                                         ${ response[topping_ids.split(",")[i]].options[j].name}</label>
                                     </span>
@@ -145,25 +147,26 @@
                                         class="text-right">NT$${ response[topping_ids.split(",")[i]].options[j].price}</span>
                                 </div>`)
 
+                            }
                         }
-                    }
 
+                    }
                 }
-                    
+
                 $(".toppings").prev('.toppings').remove()
 
             }
         });
     });
 
-    $(document).on('click', 'input:radio[id^="cancelable-radio-"]', function(event){
+    $(document).on('click', 'input:radio[id^="cancelable-radio-"]', function (event) {
         if (this.className != "selected") {
             // console.log('not selected yet');
 
             $(this).closest('.modal-body').find(`input[name=${this.name}]`).removeClass('selected');
             $(this).addClass("selected")
-            
-        }else if (this.className == "selected") {
+
+        } else if (this.className == "selected") {
             // console.log('selected yet');
 
             $(this).removeClass("selected")
@@ -175,41 +178,42 @@
         $(".toppings").remove();
         $('.modal #sum').text(0)
 
-        $('input:radio:checked').each(function(e){
+        $('input:radio:checked').each(function (e) {
             this.checked = false
         })
-        $('input:checkbox:checked').each(function(e){
+        $('input:checkbox:checked').each(function (e) {
             this.checked = false
         })
     }
 
-    $(document).on('click', 'input', function(event){
+    $(document).on('click', 'input', function (event) {
         var sum = 0;
 
-        $('input:radio:checked').each(function(e){
+        $('input:radio:checked').each(function (e) {
             sum += JSON.parse($(this).attr('menudetails')).price;
         })
-        $('input:checkbox:checked').each(function(e){
+        $('input:checkbox:checked').each(function (e) {
             sum += JSON.parse($(this).attr('menudetails')).price;
         })
-        
-        $('.modal #sum').text(sum+' ')
+
+        $('.modal #sum').text(sum + ' ')
     })
 
-    function submit(productId){
+    function submit(productId) {
 
+        var menuImg = $(`#menu-img-${productId}`).attr('src');
         var menuTitle = $(`#menu-title-${productId}`).text();
 
         var menuContents = new Array();
         var amount = parseInt($('#sum').text().trim());
-        
-        for(var i = 0; i < $('input:radio:checked').length; i++) {
+
+        for (var i = 0; i < $('input:radio:checked').length; i++) {
             var radioId = $('input:radio:checked').val(0)[i].id;
             var menuContnet = new Object();
             menuContnet = $(`#${radioId}`).attr('menudetails');
             menuContents.push(JSON.parse(menuContnet));
         }
-        for(var i = 0; i < $('input:checkbox:checked').length; i++) {
+        for (var i = 0; i < $('input:checkbox:checked').length; i++) {
             var checkboxId = $('input:checkbox:checked').val(0)[i].id;
             var menuContnet = new Object();
             menuContnet = $(`#${checkboxId}`).attr('menudetails');
@@ -217,25 +221,25 @@
         }
 
         $.ajax({
-            url: '/menu/postOrder',                        
-            type: 'post',      
-            dataType: "json",             
+            url: '/menu/postOrder',
+            type: 'post',
+            dataType: "json",
             data: {
                 name: $('.accountTitle').attr('name'),
                 account: $('.accountTitle').attr('account'),
+                orderImg: menuImg,
                 orderTitle: menuTitle,
                 orderContents: menuContents,
                 amount: amount
             },
-            error: function (err) { 
+            error: function (err) {
                 if (err) throw err
                 console.log('bad job');
                 alert('Oops, 好像哪裡出錯了(抓頭)')
-                
-            },      
-            success: function (response) { 
-                console.log('good job')
-                console.log(response);
+
+            },
+            success: function (response) {
+
                 Swal.fire({
                     icon: 'success',
                     title: '成功加入購物車',
@@ -253,14 +257,14 @@
                         no-repeat
                     `
                 }).then((result) => {
-                    if(result.value){
-                        window.location.href = '/cart/getCartList'
+                    if (result.value) {
+                        window.location.href = `/cart/getCartList/`
                     }
-                    
+
                 })
-                
+
             }
         });
-        
+
     }
 </script>
