--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 				<p>
 					今天中午，我想來點...
 				</p>
-				<a href="/menu/getMenu" class="primary-btn text-uppercase">看菜單</a>
+				<a href="/menu/getMenu?orderId=<%= orderId %>" class="primary-btn text-uppercase">看菜單</a>
 			</div>
 			<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
 				<img class="img-fluid" src="img/hero-img.png" alt="">
