--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -79,7 +79,9 @@
         </div>
         <nav id="nav-menu-container">
           <ul class="nav-menu">
-            <li class="auth"><a href="/menu/getMenu">看菜單</a></li>
+            <li class="auth dashboard"><a href="#" id="manageUsers">管理使用者</a></li>
+            <li class="auth dashboard"><a href="#" id="manageOrders">管理訂單</a></li>
+            <li class="auth"><a href="#" class="nav-lookMenu">看菜單</a></li>
             <li class="auth menu-has-children"><a class="accountTitle">Hi</a>
               <ul>
                 <li class="auth"><a href="/cart/getCartList">購物車</a></li>
@@ -208,6 +210,25 @@
             $('.auth').hide();
             $('.non-auth').show();
           }
+
+          if(res.account == 'admin'){
+            $('.dashboard').show();
+            $('#manageUsers').attr('href', '/dashboard/getUsers')
+            $('#manageOrders').attr('href', '/dashboard/getOrders')
+          }else{
+            $('.dashboard').hide();
+          }
+        }
+      })
+
+      $.ajax({
+        url: '/orderId',
+        type: 'get',
+        error: function (err) {
+          if (err) throw err
+        },
+        success: function (res) {
+          $('.nav-lookMenu').attr('href', `/menu/getMenu?orderId=${res.orderId}`)
         }
       })
     })
