--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 				<h6>Howdy! This is</h6>
 				<h1>Dada Eats</h1>
 				<p>
-					今天中午，我想來點......
+					今天中午，我想來點....
 				</p>
 				<a href="/menu/getMenu?orderId=<%= orderId %>" class="primary-btn text-uppercase">看菜單</a>
 			</div>
