--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!-- start banner Area -->
-<section class="banner-area">
+<section class="banner-area" style="background-image: url('/img/bannerbgImg.jpg'); background-repeat: no-repeat;background-position: top">
 	<div class="container">
 		<div class="row fullscreen align-items-center justify-content-between">
 			<div class="col-lg-6 col-md-6 banner-left">
@@ -9,9 +9,6 @@
 					今天中午，我想來點...
 				</p>
 				<a href="/menu/getMenu?orderId=<%= orderId %>" class="primary-btn text-uppercase">看菜單</a>
-			</div>
-			<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
-				<img class="img-fluid" src="img/hero-img.png" alt="">
 			</div>
 		</div>
 	</div>
@@ -23,25 +20,22 @@
 	<div class="container">
 		<div class="row align-items-center justify-content-between">
 			<div class="col-lg-6 col-md-6 home-about-left">
-				<img class="img-fluid" src="img/hero-img.png" alt="">
+				<img class="img-fluid" src="/img/aragaki.jpg" alt="">
 			</div>
 			<div class="col-lg-5 col-md-6 home-about-right">
 				<h6>About</h6>
 				<h1 class="text-uppercase">關於這個平台</h1>
 				<p>
-					Here, I focus on a range of items and features that we use in life without giving them a second
-					thought. such as Coca Cola. Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-					incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-					ullamco.
+					有礙於每次訂餐都要經過一段繁複的手續，加上不到一定金額要加收外送費，故萌生的這個辦公室團體外送平台Dada Eats，希望能提供一個友善的用餐管道
 				</p>
-				<a href="#" class="primary-btn text-uppercase">View Full Details</a>
+				<a href="#timeline" class="primary-btn text-uppercase">看教學</a>
 			</div>
 		</div>
 	</div>
 </section>
 <!-- End home-about Area -->
 
-<section class="timeline pb-120 section-gap">
+<section class="timeline pb-120 section-gap" id="timeline">
 	<div class="text-center">
 		<div class="menu-content pb-70">
 			<div class="title text-center">
