--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1295,6 +1295,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .progress-table .table-row .country img {
   margin-right: 15px;
+  align-self: center;
 }
 
 .progress-table .table-row .percentage .progress {
