--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -41,7 +41,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header" style="display: block">
-                            <button type="button" class="close" menu-dismiss="modal" aria-label="Close">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             <% if( menus.menu_categories[i].products[j].logo_path ){ %>
@@ -73,8 +73,9 @@
                             <p>總計：<p id="sum">5</p>
                             </p>
                             <button id="submit-btn-<%= menus.menu_categories[i].products[j].id %>" type="button"
-                                class="btn btn-primary" onclick="submit(<%= menus.menu_categories[i].products[j].id %>)"
-                                data-dismiss="modal">確定</button>
+                                class="btn btn-primary submit-btn"
+                                onclick="submit(<%= menus.menu_categories[i].products[j].id %>)" data-dismiss="modal"
+                                disabled="disabled">確定</button>
                         </div>
                     </div>
                 </div>
@@ -184,6 +185,7 @@
         $('input:checkbox:checked').each(function (e) {
             this.checked = false
         })
+        $('.modal-footer button').attr('disabled', 'disabled')
     }
 
     $(document).on('click', 'input', function (event) {
@@ -197,6 +199,12 @@
         })
 
         $('.modal #sum').text(sum + ' ')
+
+        if ($('#sum').text() == '0') {
+            $('.modal-footer button').attr('disabled', 'disabled')
+        } else {
+            $('.modal-footer button').removeAttr('disabled')
+        }
     })
 
     function submit(productId) {
